microk8s/app/microk8s-ingress/k8s/bar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  labels:
    app: bar-app
    tier: backend
    version: v1
spec:
  selector:
    matchLabels:
      app: bar-app
  replicas: 2
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
        - name: bar-app
          image: ashimjk/microk8s-app
          ports:
            - containerPort: 8080
