microk8s/app/microk8s-ingress/k8s/foo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  labels:
    app: foo-app
    tier: backend
    version: v1
spec:
  selector:
    matchLabels:
      app: foo-app
  replicas: 2
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
        - name: foo-app
          image: ashimjk/microk8s-app
          ports:
            - containerPort: 8080
