microk8s/app/microk8s-ingress/k8s/bar-service.yml
kind: Service
apiVersion: v1
metadata:
  name: bar-app
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    name: bar-app
