microk8s/app/microk8s-ingress/k8s/foo-service.yml
kind: Service
apiVersion: v1
metadata:
  name: foo-app
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    name: foo-app
