microk8s/app/microk8s-ingress/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ashimjk.io
      secretName: k8ssecret
  rules:
    - host: ashimjk.io
      http:
        paths:
          - path: /foo
            backend:
              serviceName: foo-app
              servicePort: 8080
          - path: /
            backend:
              serviceName: bar-app
              servicePort: 8080
